sandbox/orchestration/k8s/frontend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  frontend-deployment
  labels:
    app:  frontend
spec:
  replicas:  2
  selector:
    matchLabels:
      app:  frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - image:  frontend:latest
        imagePullPolicy: IfNotPresent
        name:  frontend
        resources:
          requests:
            cpu: "20m"
            memory: "500Mi"
          limits:
            cpu: "50m"
            memory: "2Gi"
        livenessProbe:
          httpGet:
            path: /
            port: 5173
          initialDelaySeconds: 90
          timeoutSeconds: 10
        readinessProbe:
          httpGet:
            path: /
            port: 5173
          initialDelaySeconds: 30
          timeoutSeconds: 10   
        ports:
        - containerPort:  5173
          name:  frontend
