sandbox/orchestration/k8s/frontend-service.yml
kind: Service
apiVersion: v1
metadata:
  name:  frontend-service
  labels:
    name:  frontend-service
spec:
  selector:
    app:  frontend
  type:  ClusterIP # or NodePort, LoadBalancer, etc.
  ports:
  - name:  name-of-the-port
    port:  80
    targetPort:  5173
