sandbox/orchestration/k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: orchestrator-ingress
  namespace: default
  labels:
    app.kubernetes.io/name: orchestrator
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:

      - pathType: Prefix
        path: /api/sandbox
        backend:
          service:
            name: sandbox-service
            port:
              number: 80


      - pathType: Prefix
        path: /
        backend:
          service:  
            name: frontend-service
            port:
              number: 80
